--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 
 <body>
 
-    <nav>
+    <header class="bg1">
+        <div class="container">
+            <h3>Basic 10</h3>
+        </div>
+    </header>
 
-        <h3>Basic 10</h3>
-    </nav>
+    <section>
 
-    <section class="mainbox1">
+        <div class="container">
+            <div class="box_left bg2">
 
-        <div class="box">
-            <div class="box_left">
-
-                <h2> o quasi quam dolorum earum debitis deleniti, ut qui eum tempora sapiente non!</h2>
-
+                <h2> o quasi quam dolorum deleniti, ut qui eum tempora sapiente non!</h2>
+                <img class="fright" src="img/fl.png">
                 <ul>
                     <li>this is my project1 </li>
                     <li>this is my project1 </li>
@@ -33,7 +34,7 @@
 
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, possimus. Consequatur magnam sed iste sit quam quod asperiores velit exercitationem eveniet saepe nihil magni cumque,
                     debitis doloribus provident animi cum! A, minus. lorem50</h3>
-                <img src="img/box1.png">
+
             </div>
             <div class="box_right">
 
@@ -44,20 +45,23 @@
                     <li>this is my project1 Lorem ipsum dolor sit amet. </li>
                 </ul>
 
-                <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto assumenda possimus quae modi nemo quibusdam tempore voluptatum vel soluta consequatur, quia veniam, esse eveniet ipsa eaque perferendis! Dolores, veritatis ut.</h3>
-                <h4>Lorem ipsum dolor sit adipisicing elit.quae numquam,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, vitae. excepturi dolore perferendis tenetur sint consequuntur earum repellendus.</h4>
-                <img src="img/box1.png">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto assumenda possimus quae modi nemo quibusdam tempore voluptatum vel soluta consequatur, quia veniam, esse eveniet ipsa eaque perferendis! Dolores, veritatis ut.</p>
+                <img class="fleft" src="img/fr.png">
+                <h4>Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, reiciendis. sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quod cupiditate. Aliquam sunt iusto accusantium beatae optio voluptas laudantium
+                    sint? adipisicing elit.quae numquam,Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, vitae. excepturi dolore perferendis tenetur sint consequuntur earum repellendus.</h4>
+
             </div>
         </div>
 
     </section>
-    <footer>
+    <footer class="bg1">
+        <div class="container">
+            <h2>
+                Footer
+            </h2>
 
-        <h2>
-            Footer
-        </h2>
-
-        <span>Copyright &#169; 2018- All Rights Reserved - Domain Name</span> <span class="sp">Template by OS Templates</span>
+            <span>Copyright &#169; 2018- All Rights Reserved - Domain Name</span> <span class="fright">Template by OS Templates</span>
+        </div>
     </footer>
 
 </body>
