changes in line

--- a/layout3.html
+++ b/layout3.html
@@ -26,12 +26,12 @@
 
     <section class="container">
         <div class="mainbox">
-            <div class="innbox bg1"></div>
+            <img src="img/940x360.gif">
         </div>
         <div>
             <div class="bottom fleft">
                 <h2>Lorem, ipsum dolor.</h2>
-                <img class="fleft" src="https://www.os-templates.com/website-templates/template-demos/free-basic-html5-templates/basic-77/images/demo/80x80.gif">
+                <img class="fleft" src="img/80x80.gif">
                 <p>Lorem, ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo neque iure iste dolorem cupiditate fuga eius alias reiciendis voluptas ipsa! sit amet consectetur adipisicing elit. In deleniti accusamus, facere expedita
                     dolores et ipsam ullam sapiente repudianda odio.</p>
 
@@ -39,7 +39,7 @@
             </div>
             <div class="bottom fleft">
                 <h2>Lorem, ipsum dolor.</h2>
-                <img class="fleft" src="https://www.os-templates.com/website-templates/template-demos/free-basic-html5-templates/basic-77/images/demo/80x80.gif">
+                <img class="fleft" src="img/80x80.gif">
                 <p>Lorem, ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo neque iure iste dolorem cupiditate fuga eius alias reiciendis voluptas ipsa! sit amet consectetur adipisicing elit. In deleniti accusamus, facere expedita
                     dolores et ipsam ullam sapiente repudianda odio.</p>
 
@@ -47,7 +47,7 @@
             </div>
             <div class="bottom fleft">
                 <h2>Lorem, ipsum dolor.</h2>
-                <img class="fleft" src="https://www.os-templates.com/website-templates/template-demos/free-basic-html5-templates/basic-77/images/demo/80x80.gif">
+                <img class="fleft" src="img/80x80.gif">
                 <p>Lorem, ipsum dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo neque iure iste dolorem cupiditate fuga eius alias reiciendis voluptas ipsa! sit amet consectetur adipisicing elit. In deleniti accusamus, facere expedita
                     dolores et ipsam ullam sapiente repudianda odio.</p>
 
@@ -57,7 +57,7 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div class="container fline">
             <span>Copyrights &copy; 2009-2021 All Rights Reserved - Domain Name</span>
             <span class="fright">Template by OS Template</span>
         </div>
