--- a/layout3.html
+++ b/layout3.html
@@ -15,10 +15,10 @@
             <h4>Free HTML5 Website Template</h4>
 
             <ul>
-                <li>TEXT LINK</li>
-                <li>TEXT LINK</li>
-                <li>TEXT LINK</li>
-                <li>TEXT LINK</li>
+                <li><a href="#"> TEXT LINK</a></li>
+                <li><a href="#"> TEXT LINK</a></li>
+                <li><a href="#"> TEXT LINK</a></li>
+                <li><a href="#"> TEXT LINK</a></li>
             </ul>
 
         </div>
